# Minesweeper_Game_Qt_Cplusplus

./: .gitignore  CMakeLists.txt  Minesweeper.pro  Minesweeper.sh  README.md  common.h  coordinates.cpp  dockerfile  end_game_dialog.cpp  game_engine.cpp  images.qrc
inc/: common.h  controller.h  coordinates.h  end_game_dialog.h  field.h  fields_manager.h  fields_uncoverer.h  game_dimensions_dialog_window.h  game_engine.h  game_window.h  minefield.h  mines_generator.h  minesweeper.h  model.h
inc/view/: field_button.h  game_dimensions_dialog_window.h  game_main_window.h
src/: controller.cpp  coordinates.cpp  end_game_dialog.cpp  field.cpp  fields_manager.cpp  fields_uncoverer.cpp  game_dimensions_dialog_window.cpp  game_engine.cpp  game_window.cpp  main.cpp  minefield.cpp  mines_generator.cpp  minesweeper.cpp  model.cpp
src/view/: end_game_dialog.cpp  field_button.cpp  game_dimensions_dialog_window.cpp  game_main_window.cpp
tests/: CMakeLists.txt
tests/src/: common_test_fixture.cpp  field_manager_test.cpp  field_test.cpp  field_uncoverer_test.cpp  minefield_test.cpp  mines_generation_test.cpp
ui_forms/: game_main_window.ui
